Address feedback: Fix layout issues on small devices

--- a/src/color-scale/color-scale.css
+++ b/src/color-scale/color-scale.css
@@ -47,6 +47,17 @@ color-swatch {
 		flex-direction: column;
 	}
 
+	&::part(label) {
+		min-inline-size: initial;
+
+		word-break: break-all;
+		overscroll-behavior: contain;
+	}
+
+	input {
+		min-inline-size: initial;
+	}
+
 	[part="delete button"] {
 		--_foreground-color: red;
 
